# modularDescriptorOptimizer

./: README.md
datasets/LabelMeFacade/: README.txt  loadImage.txt  loadImage.txt~  test.txt  train.txt
datasets/LabelMeFacade/labelme-perl/: README
datasets/Oxford/: README.txt  ReadmeEF.txt  ReadmeOxford.txt  convtGray.py
datasets/Oxford/bark/: loadTestImage.txt
datasets/Oxford/bikes/: loadHomographyMatrices.txt~
datasets/Oxford/notredame/: loadHomographyMatrices.txt
datasets/Oxford/obama/: loadHomographyMatrices.txt~
datasets/Oxford/paintedladies/: H2to1p  H2to3p  H2to4p  H2to5p  H3to1p  H3to3p  H3to4p  H3to6p  H4to2p  H4to6p  H4to8p  H5to1p  H5to2p  H5to4p  H5to5p  H6to4p  H6to6p  H6to7p  H7to2p  H7to6p  H7to8p  H8to2p  H8to3p  H8to4p  H8to6p  H8to8p  img1.pgm  img1.ppm  img1.ppm.wade.txt  (+32 more)
datasets/brighton/: brightonImages.txt~  brightonTestImages.txt  brightonTrainImages.txt  brightonTrainImages.txt~
datasets/tilde/: tildeTestImages.txt  tildeTrainImages.txt
project_files/: CMakeLists.txt  main.cpp
project_files/cpp/Dataset/: ParsingCSV.cpp
project_files/cpp/Descriptor/: Descriptor.cpp  DescriptorAssembler.cpp  DescriptorAssembler_repo.cpp  DescriptorCalculator.cpp  DescriptorExtract.cpp  DescriptorModule.cpp  MDADescriptor.cpp
project_files/cpp/Evaluation/: EvaluationValues.cpp  GeneticEvaluation.cpp  PostGeneticBundleEvaluation.cpp  PostGeneticEvaluation.cpp  SegmentationEvaluation.cpp  TestTilde.cpp
project_files/cpp/Genetic/: DescriptorGeneration.cpp  GADescriptorGA.cpp  Genetic.cpp
project_files/cpp/Images/: Database.cpp  DescriptorImages.cpp  ImagePatch.cpp  ImageProcessing.cpp  Images.cpp
project_files/cpp/KeypointDetector/tilde/: libTILDE.cpp
project_files/cpp/MachineLearning/: BagOfWords.cpp  NaiveBayes.cpp  NeuralNetworks.cpp  RandomForest.cpp  SparseCoding.cpp  SupportVectorMachine.cpp
project_files/cpp/Mathematics/: AffineMoments.cpp  CentralMoments.cpp  HuMomentInvariant.cpp  Matek.cpp  MomentsCounter.cpp  RawMoments.cpp
project_files/cpp/Ploting/: bardialog.cpp  dialog.cpp  dialog.ui  postDialog.ui  postdialog.cpp
project_files/cpp/Segmentation/: BoundingBox.cpp  ImageKeypoints.cpp  ImageLabeling.cpp  KeyInterestPoint.cpp
project_files/headers/: utils.h
project_files/headers/Dataset/: ParsingCSV.h
project_files/headers/Descriptor/: Descriptor.h  DescriptorAssembler.h  DescriptorAssembler_repo.h  DescriptorCalculator.h  DescriptorExtract.h  DescriptorModule.h  MDADescriptor.h
project_files/headers/Evaluation/: EvaluationValues.h  GeneticEvaluation.h  PostGeneticBundleEvaluation.h  PostGeneticEvaluation.h  SegmentationEvaluation.h  TestTilde.h
project_files/headers/Genetic/: DescriptorGeneration.h  GADescriptorGA.h  Genetic.h
project_files/headers/Images/: Database.h  DescriptorImages.h  ImagePatch.h  ImageProcessing.h  Images.h
project_files/headers/KeypointDetector/3rdParties/: tinydir.h
project_files/headers/KeypointDetector/tilde/: NonMaxSup.hpp  libTILDE.hpp
project_files/headers/MachineLearning/: BagOfWords.h  NaiveBayes.h  NeuralNetworks.h  RandomForest.h  SparseCoding.h  SupportVectorMachine.h
project_files/headers/Mathematics/: AffineMoments.h  CentralMoments.h  HuMomentInvariant.h  Matek.h  MomentsCounter.h  RawMoments.h
project_files/headers/Ploting/: barPlot.ui  bardialog.h  dialog.h  postdialog.h
project_files/headers/Segmentation/: BoundingBox.h  ImageKeypoints.h  ImageLabeling.h  KeyInterestPoint.h
(+1111 files in other folders)
